diss: attempts whitcomb

--- a/alternatives.tex
+++ b/alternatives.tex
@@ -426,11 +426,26 @@ where \textcite[\S 4.3]{1991:pericchi} represents an extreme case,
 combining a $l(\vartheta)$ proportional to the light-tailed normal distribution %(having light tails)
 with $u(\vartheta) \propto 1$ that gives the most heavy tails possible.
 
-
-
 \medskip
 
-***short discussion of work in BA Norbert Krautenbacher,
+\parencite{2005:whitcomb} studies imprecise Bayesian inference in case of
+
+prior and posterior imprecision
+
+
+
+***large part of work in IP literature assumes finite sample spaces,
+basic examples often with very small support. Then, parametric models are unecessary,
+and priors can be defined as basic discrete distributions with a probability mass function
+$p(\vartheta_j) = p_j,\ j=1,\ldots,k$ if the support has $k$ elements.
+
+***There is always the possibility to switch from parametric models to nonparemeteric ones
+by discretising***
+
+
+start with \parencite{2005:whitcomb} then comparison***
+
+***short discussion of work in \textcite{2011:krautenbacher} BA Norbert Krautenbacher,
 comparison to \parencite{2005:whitcomb}, then rewrite this:
 
 **par ``Some computational aspects'' from \textcite[\S 4.2]{itip-statinf} on discrete models***
