--- a/bib/other-refs.bib
+++ b/bib/other-refs.bib
@@ -612,3 +612,10 @@ url = "http://www.sciencedirect.com/science/article/pii/S0888613X12000862",
     Url = {http://dx.doi.org/10.3929/ethz-a-007313975}, 
     Year = 2011}
 
+@MASTERSTHESIS{2011:krautenbacher,
+  author = {Norbert Krautenbacher},
+  year = {2011},
+  title = {{Ein Beitrag zur generalisierten Bayes-Inferenz: Erweiterung und Anwendung der Implementierung der generalized iLUCK-models}},
+  school = {LMU Munich},
+}
+
