diss: ref krautenbacher

--- a/bib/eigene.bib
+++ b/bib/eigene.bib
@@ -2,7 +2,7 @@
   author = {Gero Walter},
   year = 2006,
   title = {{Robuste Bayes-Regression mit Mengen von Prioris --- Ein Beitrag zur Statistik unter komplexer Unsicherheit}},
-  school = {LMU Munich},
+  school = {Department of Statistics, LMU Munich},
   url = {http://www.stat.uni-muenchen.de/~thomas/team/diplomathesis_GeroWalter.pdf}
 }
 
