--- a/bib/other-refs.bib
+++ b/bib/other-refs.bib
@@ -616,6 +616,6 @@ url = "http://www.sciencedirect.com/science/article/pii/S0888613X12000862",
   author = {Norbert Krautenbacher},
   year = {2011},
   title = {{Ein Beitrag zur generalisierten Bayes-Inferenz: Erweiterung und Anwendung der Implementierung der generalized iLUCK-models}},
-  school = {LMU Munich},
+  school = {Department of Statistics, LMU Munich},
 }
 
