--- a/concluding.tex
+++ b/concluding.tex
@@ -246,18 +246,21 @@ for canonical priors to one-parameter exponential family likelihoods,
 with the aim to generate near-noninformative prior sets $\MZ$.
 
 
+%***short note on eggplant shapes in talk? (preliminary results)
 
-***short note on eggplant shapes in talk? (preliminary results)
+% rectangle ``somewhat peculiar'' from a behavioral point of view (Section~\ref{sec:resume}).
 
-%``somewhat peculiar'' from a behavioral point of view (Section~\ref{sec:resume}).
+
+***comparison with other approaches in Section~\ref{sec:alternatives}***
 
 ***study by ***krautenbacher*** shows that elicitation of $\PZ$ can be difficult,
 compares with \textcite{2005:whitcomb}, similar results, see Section~\ref{sec:alternatives}****
 
-***comparison with other approaches in Section~\ref{sec:alternatives}***
+***should be cautious with skewed distributions, as expectation interval may be misleading (look at HD intervals, too!)
+***remember that the canonical conjugate may not behave as expected
 
-***more studies for comparison with the model from \ref{sec:generalmodel} to be done,
-also with hierarchical models (Section~\ref{sec:hierarchical})?***
+***more studies for comparisons with the model from \ref{sec:generalmodel} to be done,
+e.g., with hierarchical models (Section~\ref{sec:hierarchical})?***
 
 
 ***double role $\nz$, see Section~\ref{sec:ibbm-resume} here, and again in outlook???
