--- a/head.tex
+++ b/head.tex
@@ -13,6 +13,7 @@
 %\usepackage[nottoc,numbib]{tocbibind}
 \usepackage{paralist}
 \usepackage{csquotes}
+\usepackage{booktabs}
 
 \usepackage[backend=bibtex,style=authoryear,maxbibnames=4,minbibnames=4,block=space,backref=true,dashed=false,firstinits=true]{biblatex}
 %,firstinits=true %prints first names only as initals in the bibliography
