--- a/jstp.tex
+++ b/jstp.tex
@@ -586,7 +586,7 @@ $\frac{1}{15}$.
 Prior and posterior beliefs can be illustrated by the union of
 credal intervals calculated as highest density (HD) intervals%
 \footnote{See the concept of highest posterior density (HPD) intervals
-as mentioned in Section~\ref{sec:beta-binom}, which used here also to
+as mentioned in Section~\ref{sec:beta-binom}, which is used here also to
 illustrate the prior state of knowledge.}
 %HD intervals\footnote{For a given distribution, a HD interval
 %(for \emph{h}ighest \emph{d}ensity) gives a set
