diss small stuff includeonly out

--- a/alternatives.tex
+++ b/alternatives.tex
@@ -445,7 +445,7 @@ From the latter, Whitcomb then derives lower and upper bounds for $p(\vartheta_j
 %through a linear programming 
 such that in both cases the set of prior probability functions is given by
 \begin{align*}
-\mathcal{M} &= \{ p(\vartheta) | \ul{p}_j \le p(\vartheta_j) \le \ol{p}_j\ \forall j=1,\ldots,m \}\,,
+\mathcal{M} &= \{ p(\vartheta) \mid \ul{p}_j \le p(\vartheta_j) \le \ol{p}_j\ \forall j=1,\ldots,m \}\,,
 \end{align*}
 where $\ul{p}_j$ and $\ol{p}_j$ are the lower and upper (indirectly) elicited bounds for $p(\vartheta_j)$, respectively.
 As a summary measure for imprecision, Whitcomb defines $\Delta = \sum_{j=1}^m \ol{p}_j-\ul{p}_j$.
@@ -580,6 +580,8 @@ $\Delta_\text{HD}$ gives the length of the HD interval;
 In summary, both models show more or less adequate results,
 with the discrete model showing some strange behaviour with respect to the expectation intervals,
 and the conjugate model with respect to HD intervals.
+
+***conjugate model directly elicited might look different.
 
 ***Basically similar results, no parametric assumption, but we don't really know what's going on!
 (repair by complex pre-posterior analysis)
