--- a/diss.tex
+++ b/diss.tex
@@ -13,7 +13,7 @@
 \input{head}
 \input{defs}
 
-\includeonly{alternatives}
+%\includeonly{alternatives}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%  Beginn des Dokuments  %%
